Assuming good features have been added :)

--- a/backend/package.json
+++ b/backend/package.json
@@ -33,7 +33,10 @@
     "iconv": "^2.0.7",
     "cheerio": "^0.15.0",
     "natural": "^0.1.27",
-    "open-graph": "^0.1.4"
+    "open-graph": "^0.1.4",
+    "passport": "^0.2.0",
+    "passport-local": "^1.0.0",
+    "passport-google": "^0.3.0"
   },
   "devDependencies": {
     "jasmine-node": "~1.13.0"
