--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -19,7 +19,9 @@
     "angular-ui-utils": "~0.1.1",
     "angular-xeditable": "~0.1.8",
     "angular-moment": "~0.7.1",
-    "angular-elastic": "~2.3.3"
+    "angular-elastic": "~2.3.3",
+    "angular-ui-router": "~0.2.10",
+    "ng-tags-input": "~2.0.1"
   },
   "devDependencies": {}
 }
